// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_ziwsty0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <legend
              class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            >
              test
            </legend>
            <div
              class="uv_78oem50 uv_78oem52p"
              style="--uv_ivy5ld0: repeat(1, minmax(0, 1fr)); --uv_ivy5ld1: repeat(1, minmax(0, 1fr)); --uv_ivy5ld2: repeat(1, minmax(0, 1fr)); --uv_ivy5ld3: repeat(1, minmax(0, 1fr)); --uv_ivy5ld4: repeat(1, minmax(0, 1fr)); --uv_ivy5ld5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="radio"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
                    data-checked="false"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      class="uv_bnlb22a"
                      id="_r_5_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 1"
                    />
                    <svg
                      class="uv_bnlb22b"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_bnlb22e"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_bnlb22d"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_bnlb22c"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_5_"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="radio"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
                    data-checked="false"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      class="uv_bnlb22a"
                      id="_r_d_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 2"
                    />
                    <svg
                      class="uv_bnlb22b"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_bnlb22e"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_bnlb22d"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_bnlb22c"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_d_"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_ziwsty0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <legend
              class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            >
              test
            </legend>
            <div
              class="uv_78oem50 uv_78oem52p"
              style="--uv_ivy5ld0: repeat(1, minmax(0, 1fr)); --uv_ivy5ld1: repeat(1, minmax(0, 1fr)); --uv_ivy5ld2: repeat(1, minmax(0, 1fr)); --uv_ivy5ld3: repeat(1, minmax(0, 1fr)); --uv_ivy5ld4: repeat(1, minmax(0, 1fr)); --uv_ivy5ld5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-testid="checked"
                data-type="checkbox"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_s0xyv0d uv_1pz5vwp1 uv_1pz5vwp0"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    aria-invalid="false"
                    checked=""
                    class="uv_1pz5vwp4 uv_1pz5vwp3"
                    id="_r_13_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="checked"
                  />
                  <svg
                    class="uv_1pz5vwp7 uv_1pz5vwp6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_1pz5vwp9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_1pz5vwpa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_mxir930 uv_mxir932d uv_mxir935j"
                    style="--uv_1o893js3: 1;"
                  >
                    <div
                      class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                    >
                      <label
                        class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                        for="_r_13_"
                      >
                        Checkbox 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_ziwsty0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <legend
              class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            >
              test
            </legend>
            <div
              class="uv_78oem50 uv_78oem52p"
              style="--uv_ivy5ld0: repeat(1, minmax(0, 1fr)); --uv_ivy5ld1: repeat(1, minmax(0, 1fr)); --uv_ivy5ld2: repeat(1, minmax(0, 1fr)); --uv_ivy5ld3: repeat(1, minmax(0, 1fr)); --uv_ivy5ld4: repeat(1, minmax(0, 1fr)); --uv_ivy5ld5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-testid="checked"
                data-type="radio"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
                    data-checked="true"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      checked=""
                      class="uv_bnlb22a"
                      id="_r_o_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="checked"
                    />
                    <svg
                      class="uv_bnlb22b"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_bnlb22e"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_bnlb22d"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_bnlb22c"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_o_"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_ziwsty0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <legend
              class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            >
              test
            </legend>
            <div
              class="uv_78oem50 uv_78oem52p"
              style="--uv_ivy5ld0: repeat(1, minmax(0, 1fr)); --uv_ivy5ld1: repeat(1, minmax(0, 1fr)); --uv_ivy5ld2: repeat(1, minmax(0, 1fr)); --uv_ivy5ld3: repeat(1, minmax(0, 1fr)); --uv_ivy5ld4: repeat(1, minmax(0, 1fr)); --uv_ivy5ld5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="checkbox"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_s0xyv0d uv_1pz5vwp1 uv_1pz5vwp0"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_1pz5vwp4 uv_1pz5vwp3"
                    id="_r_1d_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 1"
                  />
                  <svg
                    class="uv_1pz5vwp7 uv_1pz5vwp6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_1pz5vwp9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_1pz5vwpa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_mxir930 uv_mxir932d uv_mxir935j"
                    style="--uv_1o893js3: 1;"
                  >
                    <div
                      class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                    >
                      <label
                        class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                        for="_r_1d_"
                      >
                        Radio 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="checkbox"
                role="button"
                style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_s0xyv0d uv_1pz5vwp1 uv_1pz5vwp0"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_1pz5vwp4 uv_1pz5vwp3"
                    id="_r_1k_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 2"
                  />
                  <svg
                    class="uv_1pz5vwp7 uv_1pz5vwp6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_1pz5vwp9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_1pz5vwpa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_mxir930 uv_mxir932d uv_mxir935j"
                    style="--uv_1o893js3: 1;"
                  >
                    <div
                      class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                    >
                      <label
                        class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                        for="_r_1k_"
                      >
                        Radio 2
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
